[gd_scene load_steps=16 format=3 uid="uid://c221xvoh8em1d"]

[ext_resource type="Texture2D" uid="uid://ce46u6aapl8kl" path="res://Assets/ui/tutorial_bg.png" id="1_d2whi"]
[ext_resource type="Script" uid="uid://dxr2toew43b86" path="res://Scripts/ui/hint.gd" id="1_txt2m"]
[ext_resource type="Texture2D" uid="uid://k735rk1tq305" path="res://Assets/ui/close_icon.png" id="2_tj7ow"]
[ext_resource type="Texture2D" uid="uid://daox43ock3lf7" path="res://Assets/ui/hint/hint_1.png" id="3_0deiq"]
[ext_resource type="Texture2D" uid="uid://d3wmcbdgjnet" path="res://Assets/ui/close_icon_hover.png" id="3_dh2er"]
[ext_resource type="Texture2D" uid="uid://du2njb678chcx" path="res://Assets/Plooy Guy-Sheet.png" id="4_0deiq"]
[ext_resource type="Texture2D" uid="uid://woq1l326oxns" path="res://Assets/ui/hint/hint_2.png" id="4_qhjfp"]
[ext_resource type="Texture2D" uid="uid://wg21y0rbjlo2" path="res://Assets/ui/hint/hint_3.png" id="5_8wecr"]
[ext_resource type="AudioStream" uid="uid://cj5qdevxooddn" path="res://Audio/ui/page_turn_sfx.mp3" id="5_txt2m"]
[ext_resource type="Texture2D" uid="uid://loktk8i0xmn" path="res://Assets/ui/hint/hint_4.png" id="6_l46pk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhjfp"]
atlas = ExtResource("4_0deiq")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wecr"]
atlas = ExtResource("4_0deiq")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l46pk"]
atlas = ExtResource("4_0deiq")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fite"]
atlas = ExtResource("4_0deiq")
region = Rect2(48, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_txt2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhjfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wecr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l46pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fite")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="hint" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_txt2m")

[node name="hint_bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_d2whi")

[node name="hint_overlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 56.0
offset_right = -75.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2

[node name="hint_container_1" type="TextureRect" parent="hint_overlay"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17753
anchor_top = 0.0361248
anchor_right = 0.922813
anchor_bottom = 0.912972
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0deiq")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="hint_container_2" type="TextureRect" parent="hint_overlay"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185249
anchor_top = 0.0591133
anchor_right = 0.921098
anchor_bottom = 0.893268
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qhjfp")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="hint_container_3" type="TextureRect" parent="hint_overlay"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.197256
anchor_top = 0.0935961
anchor_right = 0.922813
anchor_bottom = 0.875205
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8wecr")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="hint_container_4" type="TextureRect" parent="hint_overlay"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.140652
anchor_top = -0.0328407
anchor_right = 1.03945
anchor_bottom = 0.975369
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_l46pk")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="hint_overlay"]
texture_filter = 1
position = Vector2(102.969, 531.186)
scale = Vector2(10.9193, 10.0155)
sprite_frames = SubResource("SpriteFrames_txt2m")
frame_progress = 0.86958
flip_h = true

[node name="page_turn_sound" type="AudioStreamPlayer2D" parent="hint_overlay"]
stream = ExtResource("5_txt2m")

[node name="close_button" type="TextureButton" parent="hint_overlay"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.947684
anchor_top = -0.0328407
anchor_right = 1.03345
anchor_bottom = 0.131363
grow_horizontal = 0
pivot_offset = Vector2(110, -10)
texture_normal = ExtResource("2_tj7ow")
texture_hover = ExtResource("3_dh2er")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true
